--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.21.1",
+    "node-sass": "^7.0.1",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9"
   }
